--- a/index.html
+++ b/index.html
@@ -916,9 +916,9 @@ s0.parentNode.insertBefore(s1,s0);
                 <div>
                     <h4 class="font-semibold text-lg mb-4">Contact Info</h4>
                     <div class="space-y-2 text-gray-300">
-                        <p>📞 (555) 123-PINK</p>
+                        <p>📞 (662) 481 -9789</p>
                         <p>✉️ hello@pinkmintclean.com</p>
-                        <p>📍 123 Clean Street<br>Sparkle City, SC 12345</p>
+                        <p>📍 Columbus Ms<br>Surrounding areas welcome!</p>
                     </div>
                 </div>
                 <div>
