Operating-Agreement.html

--- a/Operating-Agreement.html
+++ b/Operating-Agreement.html
@@ -99,7 +99,7 @@
         <section>
             <h2 class="section-title"><span class="article-number">1.</span> Company Purpose</h2>
             <p class="paragraph">
-                The purpose of Pink Mint Clean LLC is to provide luxury cleaning services with a focus on cinematic presentation, client empowerment, and operational excellence. Services may include residential and commercial cleaning, laundry care, kitchen detailing, and organizational enhancements, all delivered with a signature aesthetic and personalized experience.
+                 The purpose of Pink Mint Clean LLC is to provide elevated cleaning services that exceed client expectations and redefine the standard of home care. The Company is committed to transforming residential and commercial spaces through meticulous attention to detail, premium products, and personalized service. Offerings may include deep cleaning, laundry care, kitchen detailing, organizational enhancements, and specialty add-ons—all delivered with a cinematic aesthetic and a focus on client empowerment. Every service is designed not only to clean, but to upgrade the environment, restore peace of mind, and reflect the luxury and intentionality at the heart of the brand
             </p>
         </section>
 
