Terms-and-Conditions.html

--- a/Terms-and-Conditions.html
+++ b/Terms-and-Conditions.html
@@ -114,7 +114,7 @@
         <section>
             <h2 class="section-title">2. 🗓️ Consultation Fee</h2>
             <ul class="list-none pl-4">
-                <li class="list-item">A non-refundable consultation fee of [$XX] is required to secure your booking and begin service planning.</li>
+                <li class="list-item">A non-refundable consultation fee of [$35] is required to secure your booking and begin service planning.</li>
                 <li class="list-item">This fee covers client intake, service customization, and scheduling logistics.</li>
                 <li class="list-item">Consultation fees are separate from service costs and must be paid before any walkthrough or planning session.</li>
             </ul>
@@ -125,7 +125,7 @@
             <ul class="list-none pl-4">
                 <li class="list-item">Rescheduling Fee: A $45.00 fee applies to any appointment changes made less than 48 hours before the scheduled service.</li>
                 <li class="list-item">Lock-Out Fee: A $50.00 fee will be charged if our team arrives and is unable to access the property due to client absence, locked entry, or other preventable barriers.</li>
-                <li class="list-item">All rescheduling and cancellations must be submitted via email to <span class="font-semibold text-pink-500">gabrealerandolph@gmail.com</span> at least 48 hours in advance, during business hours: Monday–Friday, 8:00 AM–4:30 PM CST.</li>
+                <li class="list-item">All rescheduling and cancellations must be submitted via email to <span class="font-semibold text-pink-500">PunkMintCleanLLC@gmail.com</span> at least 48 hours in advance, during business hours: Monday–Friday, 8:00 AM–4:30 PM CST.</li>
                 <li class="list-item">Fees are non-negotiable and will be invoiced immediately following the incident.</li>
             </ul>
         </section>
