--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             }
         }
     </script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
 </head>
     <!--Start of Tawk.to Script-->
 <script type="text/javascript">
