--- a/index.html
+++ b/index.html
@@ -23,9 +23,30 @@
             }
         }
     </script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
+
+<!-- THIS IS THE NEW SCRIPT BLOCK YOU NEED TO ADD -->
+<script>
+  // Your web app's Firebase configuration
+  const firebaseConfig = { // Changed 'var' to 'const' for modern JS practices
+    apiKey: "AIzaSyAm-vPcE7dU9V487JBvkdgk4X0vvx-6QFI",
+    authDomain: "pinkmint-1c83f.firebaseapp.com",
+    projectId: "pinkmint-1c83f",
+    storageBucket: "pinkmint-1c83f.firebasestorage.app",
+    messagingSenderId: "42703485247",
+    appId: "1:42703485247:web:f7d346673d6f9c572d3b8a",
+    measurementId: "G-16TYE6L7N3"
+  };
+
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+
+  // Get a reference to the Firestore database service
+  const db = firebase.firestore(); // This line makes 'db' available for your booking function
+</script>
+
 </head>
     <!--Start of Tawk.to Script-->
 <script type="text/javascript">
