--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@ s0.parentNode.insertBefore(s1,s0);
                 squareFootage: document.getElementById('squareFootage').value,
                 bedrooms: document.getElementById('bedrooms').value,
                 bathrooms: document.getElementById('bathrooms').value,
-                homeCondition: document.getElementById('homeCondition').value,,
+                homeCondition: document.getElementById('homeCondition').value,
                 
                 // Scheduling
                 preferredDate: document.getElementById('preferredDate').value,
