--- a/index.html
+++ b/index.html
@@ -708,15 +708,9 @@ s0.parentNode.insertBefore(s1,s0);
                     </div>
                 </div>
 
-                <div class="mt-8">
-                    <h3 class="font-semibold text-xl mb-4">Home Description</h3>
-                    <div class="grid md:grid-cols-2 gap-6">
-                        <div>
+                                        <div>
                             <label class="block text-sm font-medium mb-2">Home Type</label>
-                            <<select class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent">
-    <!-- options -->
-</select>
->
+                            <select id="homeType" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent">
                                 <option>Single-family house</option>
                                 <option>Apartment</option>
                                 <option>Condo</option>
@@ -726,11 +720,9 @@ s0.parentNode.insertBefore(s1,s0);
                             </select>
                         </div>
                         <div>
-                            <label class="block text-sm font-medium mb-2">Square Footage (approximate)</label>
-                            <<select class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent">
-    <!-- options -->
-</select>
-                                <option>Under 800 sq ft</option>
+                            <label class="block text-sm font-medium mb-2">Square Footage (approximate) </label>
+                            <select id="homeType" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent">
+                               <option>Under 800 sq ft</option>
                                 <option>800-1,200 sq ft</option>
                                 <option>1,200-1,800 sq ft</option>
                                 <option>1,800-2,500 sq ft</option>
@@ -739,11 +731,10 @@ s0.parentNode.insertBefore(s1,s0);
                                 <option>Not sure</option>
                             </select>
                         </div>
+
                         <div>
                             <label class="block text-sm font-medium mb-2">Number of Bedrooms</label>
                             <select class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent">
-    <!-- options -->
-</select>
                                 <option>Studio</option>
                                 <option>1 bedroom</option>
                                 <option>2 bedrooms</option>
@@ -752,11 +743,9 @@ s0.parentNode.insertBefore(s1,s0);
                                 <option>5+ bedrooms</option>
                             </select>
                         </div>
-                        <div>
+                                        <div>
                             <label class="block text-sm font-medium mb-2">Number of Bathrooms</label>
-                            <<select class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent">
-                              <!-- options -->
-                                 </select>
+                            <select id="homeType" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent">
                                 <option>1 bathroom</option>
                                 <option>1.5 bathrooms</option>
                                 <option>2 bathrooms</option>
@@ -765,7 +754,6 @@ s0.parentNode.insertBefore(s1,s0);
                                 <option>3.5+ bathrooms</option>
                             </select>
                         </div>
-                    </div>
                     
                     <div class="mt-6 space-y-4">
                         <div>
