--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@ s0.parentNode.insertBefore(s1,s0);
                                 <option>3.5+ bathrooms</option>
                             </select>
                         </div>
-                    
+                    <label class="block text-sm font-medium mb-2">Flooring inside the home</label>
                     <div class="mt-6 space-y-4">
                         <div>
                             <label class="flex items-center space-x-2">
@@ -783,7 +783,6 @@ s0.parentNode.insertBefore(s1,s0);
     <span class="text-sm">Other</span>
 </label>
                             </div>
-                        </div>
                         
                         <div>
                             <label class="block text-sm font-medium mb-2">Current condition of your home</label>
