--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@ s0.parentNode.insertBefore(s1,s0);
                         </div>
                         <div>
                             <label class="block text-sm font-medium mb-2">Preferred Time</label>
-                            <<select class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent">
+                            <select class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent">
                                 <option>Morning (8am-12pm)</option>
                                 <option>Afternoon (12pm-4pm)</option>
                                 <option>Evening (4pm-7pm)</option>
@@ -827,7 +827,7 @@ s0.parentNode.insertBefore(s1,s0);
                         </div>
                         <div class="md:col-span-2">
                             <label class="block text-sm font-medium mb-2">Will you be home during the service?</label>
-                            <<select class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent">
+                            <select class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent">
                                 <option>Yes, I'll be home</option>
                                 <option>No, but I'll provide access</option>
                                 <option>Partially - I may come and go</option>
