--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <li class="flex items-center"><span class="text-mint-green mr-2">✓</span>Dusting all surfaces</li>
                                 <li class="flex items-center"><span class="text-mint-green mr-2">✓</span>Vacuuming carpets & rugs</li>
                                 <li class="flex items-center"><span class="text-mint-green mr-2">✓</span>Mopping hard floors</li>
-                                <li class="flex items-center"><span class="text-mint-green mr-2">✓</span>Kitchen cleaning</li>
+                                <li class="flex items-center"><span class="text-mint-green mr-2">✓</span>Surface kitchen cleaning</li>
                                 <li class="flex items-center"><span class="text-mint-green mr-2">✓</span>Bathroom cleaning</li>
                                 <li class="flex items-center"><span class="text-mint-green mr-2">✓</span>Trash removal</li>
                             </ul>
@@ -567,7 +567,7 @@
                         <div class="space-y-4">
                             <div>
                                 <label class="block text-sm font-medium mb-2">Areas to avoid or treat with extra care:</label>
-                                <textarea id="areasNeedingAttentionInput" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent" rows="3" placeholder="e.g., antique furniture, delicate items, home fixes equipment, children's rooms"></textarea>
+                                <textarea id="specialAreasToAvoidInput" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent" rows="3" placeholder="e.g., antique furniture, delicate items, home fixes equipment, children's rooms"></textarea>
 
                             </div>
 
@@ -595,7 +595,7 @@
                 <div class="space-y-6">
                     <div>
                         <label class="block text-sm font-medium mb-2">What areas of your home need the most attention?</label>
-                        <textarea id="areasNeedingAttentionInput" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent" rows="3" placeholder="e.g., kitchen gets heavy use, bathrooms need deep cleaning, living room has high traffic"></textarea>
+                        <textarea id="homeCleaningAttentionInput" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent" rows="3" placeholder="e.g., kitchen gets heavy use, bathrooms need deep cleaning, living room has high traffic"></textarea>
                     </div>
                     <div>
                         <label class="block text-sm font-medium mb-2">How often do you currently clean your home?</label>
@@ -614,8 +614,6 @@
                     </div>
 
                     
-
-
                     <div>
                         <label class="block text-sm font-medium mb-2">Any specific challenges or problem areas we should know about?</label>
                         <textarea id="challengesInput" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-pink-mint focus:border-transparent" rows="3" placeholder="e.g., hard water stains, pet odors, high-traffic areas, stubborn stains"></textarea>
