--- a/index.html
+++ b/index.html
@@ -1006,6 +1006,132 @@
     </footer>
 
     <script>
+
+// PASTE THIS AT THE VERY BEGINNING OF YOUR LARGE <script> BLOCK (after <script> tag)
+
+// Get the Firebase Auth service instance.
+// This works because firebase-auth.js is loaded and firebase.initializeApp() has run.
+const auth = firebase.auth();
+
+// --- Get DOM Elements for Authentication ---
+const signupEmailInput = document.getElementById('signupEmail');
+const signupPasswordInput = document.getElementById('signupPassword');
+const signupBtn = document.getElementById('signupBtn');
+
+const signinEmailInput = document.getElementById('signinEmail');
+const signinPasswordInput = document.getElementById('signinPassword');
+const signinBtn = document.getElementById('signinBtn');
+
+const logoutBtn = document.getElementById('logoutBtn');
+const authStatusSpan = document.getElementById('authStatus');
+const loggedInUserEmailP = document.getElementById('loggedInUserEmail');
+const errorMessageP = document.getElementById('errorMessage');
+const authFormsDiv = document.getElementById('authForms'); // The container for signup/signin forms
+
+// --- Event Listeners for Authentication Buttons ---
+
+// Sign Up
+if (signupBtn) {
+    signupBtn.addEventListener('click', async () => {
+        const email = signupEmailInput.value;
+        const password = signupPasswordInput.value;
+        errorMessageP.textContent = ''; // Clear previous errors
+
+        if (!email || !password) {
+            errorMessageP.textContent = "Please enter both email and password for signup.";
+            return;
+        }
+        if (password.length < 6) { // Firebase requires at least 6 characters for passwords
+            errorMessageP.textContent = "Password should be at least 6 characters.";
+            return;
+        }
+
+        try {
+            const userCredential = await auth.createUserWithEmailAndPassword(email, password);
+            console.log("Successfully signed up and logged in:", userCredential.user.email);
+            // The onAuthStateChanged listener below will update the UI
+        } catch (error) {
+            console.error("Sign up error:", error.message);
+            errorMessageP.textContent = `Sign Up Failed: ${error.message}`;
+        }
+    });
+}
+
+// Sign In
+if (signinBtn) {
+    signinBtn.addEventListener('click', async () => {
+        const email = signinEmailInput.value;
+        const password = signinPasswordInput.value;
+        errorMessageP.textContent = ''; // Clear previous errors
+
+        if (!email || !password) {
+            errorMessageP.textContent = "Please enter both email and password for signin.";
+            return;
+        }
+
+        try {
+            const userCredential = await auth.signInWithEmailAndPassword(email, password);
+            console.log("Successfully signed in:", userCredential.user.email);
+            // The onAuthStateChanged listener below will update the UI
+        } catch (error) {
+            console.error("Sign in error:", error.message);
+            errorMessageP.textContent = `Sign In Failed: ${error.message}`;
+        }
+    });
+}
+
+// Logout
+if (logoutBtn) {
+    logoutBtn.addEventListener('click', async () => {
+        errorMessageP.textContent = ''; // Clear previous errors
+        try {
+            await auth.signOut();
+            console.log("User logged out.");
+            // The onAuthStateChanged listener below will update the UI
+        } catch (error) {
+            console.error("Logout error:", error.message);
+            errorMessageP.textContent = `Logout Failed: ${error.message}`;
+        }
+    });
+}
+
+// --- Handle User State (This automatically updates your UI when login status changes) ---
+// This function will run when the page loads AND whenever the user's login state changes
+auth.onAuthStateChanged((user) => {
+    if (user) {
+        // User is signed in
+        authStatusSpan.textContent = "Logged In";
+        loggedInUserEmailP.textContent = `Email: ${user.email}`;
+        if (logoutBtn) logoutBtn.classList.remove('hidden'); // Show logout button
+
+        // Hide login/signup forms when logged in
+        if (authFormsDiv) authFormsDiv.classList.add('hidden');
+
+        console.log("Auth State Changed: User is logged in.", user.uid, user.email);
+
+        // You can now associate bookings with the logged-in user's UID!
+        // In your bookService() function, you could now get:
+        // const currentUserId = user.uid;
+        // and save it with the booking: docRef = await db.collection('bookings').add({ ...customerData, userId: currentUserId });
+
+    } else {
+        // User is signed out
+        authStatusSpan.textContent = "Logged Out";
+        loggedInUserEmailP.textContent = "";
+        if (logoutBtn) logoutBtn.classList.add('hidden'); // Hide logout button
+
+        // Show login/signup forms when logged out
+        if (authFormsDiv) authFormsDiv.classList.remove('hidden');
+
+        console.log("Auth State Changed: User is logged out.");
+    }
+});
+
+// NOW ALL YOUR EXISTING JAVASCRIPT FUNCTIONS (like let basePrice = 0; or function scrollToServices() ) WILL FOLLOW THIS BLOCK.
+
+
+        
+        
         let basePrice = 0;
         let baseTime = 120; // Base time in minutes
 
